# aseprite-mcp

./: .gitignore  .mcp.json.example  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml
aseprite_mcp/: __init__.py  __main__.py  server.py
aseprite_mcp/core/: __init__.py  godot.py  lua.py  ops.py  palettes.py  runner.py
aseprite_mcp/mcp/: __init__.py  app.py  tools.py
docs/superpowers/plans/: 2026-07-10-aseprite-mcp-mvp.md
tests/: test_godot.py  test_integration.py  test_lua.py  test_ops.py  test_runner.py
